* Fixed a mem leak for safe transfers
* Fixed a crash during downloads
* Fixed speed problems with user list
* Added "open download directory" to file and tray menu
* Shift-clicking tab will close window (thanks twink)
* Added support for $UserIP, %[ip] as user command parameter and server side ip detection (automatically used
  if the ip field in settings is blank)
* Transfer bar colors updated (they'll be made user-configurable one fine day)
* Fixed possibility to share same folder twice (thanks theparaniodone)
* Fixed translations of kick & redirect user
* Fixed missing subdirs when moving directories in the queue
* Really fixed hublist space trimming =)
* Added ".wmv" and ".ogm" as video extensions
* Fixed some issues with same-named fav users
* Fixed small mem leak in fav users
* Max download slots default changed to 3
* Max 3 slots more than max download slots are used for highest priority downloads
* Added option to automatically download filelist and match it on autosearch match. This will dramatically speed up
  autosearching, lessening the strain on the hubs as less searches have to be done.
* Added accelerator for filtering in public hubs (thanks gargoyle)
* Fixed some translations (thanks ciber)
* Added "downloaded bytes" to queue (thanks ciber)
* Fixed refresh file list from main menu

 -- 0.304 2003-11-19 --
* Fixed missing usercommands (thanks sed)
* Added option not to receive usercommands 
* Fixed a bug with bad search result type (hub owners, make sure your users upgrade if they use 0.302-0.303) 
  (thanks saurod)
* Added "$Supports MiniSlots" for other clients to profit from dc++'s free small files and filelist free slots
  (thanks sed)
* Added /getlist command to get users list from chat (thanks twink)
* Added check so that temp directory cannot be added to share list
* Hopefully speeded up hub connect a little
* Fixed transfer view sorting I think, this is how it should be: running downloads, running uploads, waiting 