@@ -69,7 +69,7 @@ public:
 		COMPRESS_TRANSFERS, SHOW_PROGRESS_BARS, SFV_CHECK, MAX_TAB_ROWS, AUTO_UPDATE_LIST,
 		MAX_COMPRESSION, FINISHED_DIRTY, ANTI_FRAG, MDI_MAXIMIZED, NO_AWAYMSG_TO_BOTS,
 		SKIP_ZERO_BYTE, ADLS_BREAK_ON_FIRST, TAB_COMPLETION, OPEN_FAVORITE_HUBS, OPEN_FINISHED_DOWNLOADS,
-		HUB_USER_COMMANDS, AUTO_SEARCH_AUTO_MATCH, INT_LAST };
+		HUB_USER_COMMANDS, AUTO_SEARCH_AUTO_MATCH, UPLOAD_BAR_COLOR, DOWNLOAD_BAR_COLOR, INT_LAST };
 
 	enum Int64Setting { INT64_FIRST = INT_LAST + 1,
 		TOTAL_UPLOAD = INT64_FIRST, TOTAL_DOWNLOAD, INT64_LAST, SETTINGS_LAST = INT64_LAST };
@@ -184,6 +184,6 @@ private:
 
 /**
  * @file
- * $Id: SettingsManager.h,v 1.50 2003/12/02 15:40:24 arnetheduck Exp $
+ * $Id: SettingsManager.h,v 1.51 2003/12/03 22:48:02 arnetheduck Exp $
  */
 
